# VibeCheck

./: .eslintrc.json  .gitignore  .prettierrc  .yarnrc.yml  Cargo.toml  README.md  build.rs  components.json  eslint.config.mjs  index.html  package-lock.json  package.json  tailwind.config.cjs  tauri.conf.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  codeql.yml  create-test-binaries.yml  lint.yml  release.yml  rust.yml  test.yml
UnityPrefabs/: VibeCheck_Prefabs.unitypackage
docs/: AppSetup.md  AvatarSetup.md  Bluetooth.md  Faq.md  LovenseConnect.md  OSCAPI.md
public/: index.html
src/: App.css  App.tsx  config.rs  handling.rs  index.css  lovense.rs  main.rs  main.tsx  style.css  toyops.rs  ui.rs  util.rs  vcupdate.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/bindings/: FeBrowserLink.ts  FeCoreEvent.ts  FeLevelTweaks.ts  FeOSCNetworking.ts  FePenetrationSystem.ts  FeProcessingMode.ts  FeScanEvent.ts  FeSocialLink.ts  FeStateEvent.ts  FeToyAddEvent.ts  FeToyAlter.ts  FeToyEvent.ts  FeToyParameter.ts  FeToyRemoveEvent.ts  FeVCFeatureType.ts  FeVCToy.ts  FeVCToyAnatomy.ts  FeVCToyFeature.ts  FeVibeCheckConfig.ts  FrontendError.ts  PenetrationSystemType.ts  ToyPower.ts
src-tauri/capabilities/: main.json  migrated.json
src-tauri/src/: bluetooth.rs  config.rs  frontend_native.rs  frontend_types.rs  handling.rs  lib.rs  main.rs  mock.rs  offline_toys.rs  osc_toy_status.rs  toy_manager.rs  toyops.rs  ui.rs  util.rs  vcerror.rs  vcore.rs
src-tauri/src/error_signal_handler/: mod.rs  state_comm.rs
src-tauri/src/errors/: mod.rs
src-tauri/src/frontend/: error.rs  frontend_native.rs  frontend_types.rs  mod.rs
src-tauri/src/osc/: errors.rs  logic.rs  mod.rs
src-tauri/src/osc_api/: mod.rs  osc_api.rs
src-tauri/src/toy_handling/: errors.rs  handling.rs  mod.rs  osc_processor.rs  penetration_systems.rs  toy_command_processor.rs  toy_manager.rs  toyops.rs
src-tauri/src/toy_handling/input_processor/: mod.rs  penetration_systems.rs
src-tauri/src/toy_handling/input_processor/penetration_systems/: mod.rs
src-tauri/src/toy_handling/input_processor/penetration_systems/sps/: mapping.rs  mod.rs  model.rs
src-tauri/src/toy_handling/input_processor/penetration_systems/tps/: mod.rs
src-tauri/src/toy_handling/mode_processor/: core.rs  mod.rs  mode_rate.rs  mode_smooth.rs
src-tauri/src/toy_handling/runtime/: client_event_handler.rs  mod.rs  toy_emitter_thread.rs  toy_management_handler.rs
src-tauri/src/util/: bluetooth.rs  errors.rs  fs.rs  mod.rs  net.rs
src-tauri/src/vcore/: config.rs  core.rs  errors.rs  mod.rs  state.rs  vcerror.rs
src-tauri/src/vcore/config/: app.rs  mod.rs  toy.rs
src-tauri/src/vcore/ipc/: call_plane.rs  emit_plane.rs  mod.rs
src/bindings/: FeFeatureParamMap.ts  FeOSCNetworking.ts  FeVCFeatureType.ts  FeVCToy.ts  FeVCToyFeature.ts  FeVibeCheckConfig.ts
src/components/: BatteryIcon.tsx  BottomButtons.tsx  ExternalLogo.tsx  Footer.tsx  FourPanel.tsx  FourPanelContainer.tsx  Header.tsx  Loading.tsx  Modal.css  Modal.tsx  NameBadge.tsx  ScanButton.tsx  Settings.css  Settings.tsx  SettingsModal.css  SettingsModal.tsx  Toast.tsx  Toy.tsx  ToyFeatureForm.tsx  ToySettings.css  ToySettings.tsx  Toys.css  Toys.tsx  UpdateButton.tsx  UpdatePing.tsx
src/components/Feature/: ToyFeatureForm.tsx  index.tsx
src/components/Footer/: ExternalLogo.tsx  UpdateButton.tsx  UpdatePing.tsx  Version.tsx  index.tsx
src/components/Modal/: index.tsx
src/components/Slider/: Slider.css  index.tsx
src/components/Switch/: index.tsx
src/components/Toast/: Toast.css
src/components/Tooltip/: index.tsx
src/components/Toys/: EnabledBadge.tsx  Loading.tsx  NameBadge.tsx  NameInfo.tsx  ToySettingsModal.tsx  Toys.tsx
src/components/ui/: FreeTextOptions.tsx  badge.tsx  button.tsx  command.tsx  scroll-area.tsx
src/context/: CoreEventContext.tsx  CoreEvents.tsx  ToastContext.tsx  ToysContext.tsx
src/data/: constants.ts  stringArrayTypes.ts
src/features/: Config.tsx  FeatureDisclosure.tsx  FeatureForm.tsx  Footer.tsx  Toy.tsx  ToySettings.tsx
src/features/Toys/: Feature.tsx  FeatureDisclosure.tsx  FeatureForm.tsx  NameInfo.tsx  Settings.tsx  Toy.tsx  ToySettings.tsx  index.tsx
src/hooks/: useCoreEvents.tsx  useSimulate.tsx  useToys.tsx  useUpdate.tsx  useUpdateEffect.tsx  useVersion.tsx
src/layout/: Button.tsx  Modal.tsx  Select.tsx  Slider.tsx  Switch.tsx  Tooltip.tsx
src/layout/Modal/: index.tsx
src/layout/Slider/: index.tsx
src/layout/Switch/: index.tsx
src/layout/Toast/: index.tsx
src/layout/Tooltip/: TooltipLabel.tsx  index.tsx
src/pages/: index.tsx
src/utils/: index.ts
wix/: main.wxs
