[package]
name = "vibecheck"
version = "0.1.3"
edition = "2021"
authors = ["SutekhVRC"]

[dependencies]
buttplug = "6.0.1"
tokio = {version = "1.17.0", features = ["rt-multi-thread", "sync", "macros", "io-std", "time"]}
futures-util = "0.3.21"
tracing-subscriber = "0.3.9"
futures = "0.3.21"
futures-timer = "3.0.2"
tracing = "0.1.32"
rosc = "0.9.0"
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.85"
eframe = "0.18.0"
directories = "4.0.1"
sysinfo = "0.26.2"
reqwest = {version = "0.11.11", features = ["blocking"]}
image = "0.24.4"


[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"