[package]
name = "vibecheck"
version = "0.4.4"
edition = "2021"
authors = ["SutekhVRC"]
rust-version = "1.65"

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
buttplug = {git = "https://github.com/SutekhVRC/buttplug", branch = "vibecheck"}
#buttplug = {path = "../../../vibecheck-dev-buttplug/buttplug/buttplug"}
#vrcoscquery = {path = "../../../vrcoscquery-rs"}
vrcoscquery = {git = "https://github.com/SutekhVRC/VRCOSCQuery"}
tokio = {version = "1.17.0", features = ["rt-multi-thread", "sync", "macros", "io-std", "time"] }
futures-util = "0.3.21"
tracing-subscriber = "0.3.9"
futures = "0.3.21"
futures-timer = "3.0.2"
tracing = "0.1.32"
rosc = "0.10.1"
serde = {version = "1.0.136", features = ["derive"] }
serde_json = "1.0.85"
directories = "5.0.1"
sysinfo = "0.31.2"
reqwest = {version = "0.12.5", features = ["blocking"] }
parking_lot = "0.12.1"
btleplug = "0.11.1"
ts-rs = {version = "9.0.1", features = ["serde-compat"] }
log = "0.4.17"
env_logger = "0.11.5"
open = "5.3.0"
dyn-clone = "1.0.16"
strum = { version="0.26.3", features = ["derive"] }
# Tauri dependencies
tauri = { version = "2.0.0-rc", features = ["tray-icon"] }
tauri-plugin-process = "2.0.0-alpha.2"
tauri-plugin-updater = "2.0.0-alpha.2"
tauri-plugin-notification = "2.0.0-alpha.3"
tauri-plugin-fs = "2.0.0-alpha.2"
tauri-plugin-single-instance = "2.0.0-alpha.2"
tauri-plugin-positioner = { version = "2.0.0-rc", features = ["tray-icon"] }
[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
