[package]
name = "vibecheck"
version = "0.5.2"
edition = "2021"
authors = ["SutekhVRC"]
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
buttplug = "9.0.9"
#buttplug = {path = "../../../vibecheck-dev-buttplug/buttplug/buttplug"}
#vrcoscquery = {path = "../../../vrcoscquery-rs"}
vrcoscquery = {git = "https://github.com/SutekhVRC/VRCOSCQuery"}
tokio = {version = "1.17.0", features = ["rt-multi-thread", "sync", "macros", "io-std", "time"] }
futures-util = "0.3.21"
tracing-subscriber = "0.3.22"
futures = "0.3.21"
futures-timer = "3.0.2"
tracing = "0.1.43"
rosc = "0.11.4"
serde = {version = "1.0.136", features = ["derive"] }
serde_json = "1.0.85"
directories = "6.0.0"
sysinfo = "0.37.2"
reqwest = {version = "0.12.25", features = ["blocking"] }
parking_lot = "0.12.5"
btleplug = "0.11.8"
ts-rs = {version = "11.1.0", features = ["serde-compat"] }
log = "0.4.17"
env_logger = "0.11.8"
open = "5.3.3"
dyn-clone = "1.0.20"
tauri-plugin-single-instance = { version = "2" }
strum = { version="0.27.2", features = ["derive"] }
# Tauri dependencies
tauri = { version = "2.9.5", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-os = "2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
